// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sendUndoWithdrawnSubmissionStateEmail > renders EQRO email when undo withdraw returns to not subject to review 1`] = `
"<h1 style="font-weight: normal;">Submission MCR-MN-0004-SNBC status was updated to 'Not subject to review' by CMS</h1>
<b>Withdraw reversed by:</b> <a href="mailto:zuko@example.com">zuko@example.com</a><br />
<b>Status:</b> Not subject to review<br />
<b>Review decision:</b> Not subject to formal review and approval<br />
<b>Reason for withdrawal reversal:</b> Test Undo Withdraw<br />
<br />
<a href="http://localhost/submissions/eqro/test-contract-123">View submission</a><br />
<br />
If you need assistance or have any questions:
<ul>
  <li>For assistance with programmatic, contractual, or operational issues, please reach out to <a href="mailto:MCGDMCOactions@cms.hhs.gov">MCGDMCOactions@cms.hhs.gov</a> and/or your CMS primary contact.</li>
  <li>For issues related to MC-Review or all other inquiries, please reach out to <a href="mailto:MC_Review_HelpDesk@cms.hhs.gov">MC_Review_HelpDesk@cms.hhs.gov</a>.</li>
</ul>
"
`;

exports[`sendUndoWithdrawnSubmissionStateEmail > renders EQRO email when undo withdraw returns to subject to review 1`] = `
"<h1 style="font-weight: normal;">Submission MCR-MN-0004-SNBC status was updated to 'Submitted' by CMS</h1>
<b>Withdraw reversed by:</b> <a href="mailto:zuko@example.com">zuko@example.com</a><br />
<b>Status:</b> Submitted<br />
<b>Review decision:</b> Subject to formal review and approval<br />
<b>Reason for withdrawal reversal:</b> Test Undo Withdraw<br />
<br />
<a href="http://localhost/submissions/eqro/test-contract-123">View submission</a><br />
<br />
If you need assistance or have any questions:
<ul>
  <li>For assistance with programmatic, contractual, or operational issues, please reach out to <a href="mailto:MCGDMCOactions@cms.hhs.gov">MCGDMCOactions@cms.hhs.gov</a> and/or your CMS primary contact.</li>
  <li>For issues related to MC-Review or all other inquiries, please reach out to <a href="mailto:MC_Review_HelpDesk@cms.hhs.gov">MC_Review_HelpDesk@cms.hhs.gov</a>.</li>
</ul>
"
`;

exports[`sendUndoWithdrawnSubmissionStateEmail > renders overall email for undo withdraw contract as expected 1`] = `
"<h1 style="font-weight: normal;">Submission MCR-MN-0004-SNBC status was updated to 'Submitted' by CMS</h1>
<b>Updated by:</b> zuko@example.com<br />
<b>Updated on:</b> 05/09/2025<br />
<b>Reason:</b> Test Undo Withdraw<br />
<b>Related rate certification(s):</b>
<ul>
  <li>rate-name-123</li>
  <li>rate-name-321</li>
</ul>
<div>If you have any questions, please reach out to your CMS point of contact.</div><br />
<a href="http://localhost/submissions/health-plan/test-contract-123">View submission in MC-Review</a>
"
`;
